--- a/app/src/main.scss
+++ b/app/src/main.scss
@@ -4,9 +4,13 @@
 
   &_logo {
     text-align: center;
+    display: flex;
+    justify-content: center;
+    height: 120px;
 
     & img {
       max-height: 120px;
+      max-width: 120px;
     }
   }
 
